--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Remove Groceries-store</title>
-    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/jquery-3.6.0.js"></script>
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
@@ -31,7 +31,7 @@
 
 
 
-            <div class="item">
+            <div class="items">
                 <span class="item1"></span><br>
                 <span class="item2"></span><br>
                 <span class="item3"></span><br>
